# czkawka

./: IMPROVEMENTS_RECOMMENDATIONS.md  README.md
czkawka_cli/: Cargo.toml
czkawka_cli/src/: commands.rs  main.rs
czkawka_cli/tests/: integration.rs
czkawka_core/: Cargo.toml
czkawka_core/src/tools/duplicate/: core.rs
czkawka_core/src/tools/similar_images/: core.rs
czkawka_gui/: Cargo.toml
czkawka_mcp/: Cargo.toml
czkawka_mcp/src/: main.rs
kalka/: README.md  main.py  pyproject.toml  take_screenshots.py
kalka/app/: action_buttons.py  backend.py  bottom_panel.py  icons.py  left_panel.py  localizer.py  logger.py  main_window.py  models.py  preview_panel.py  progress_widget.py  results_view.py  settings_panel.py  state.py  tool_settings.py  utils.py
kalka/app/dialogs/: about_dialog.py  save_dialog.py  select_dialog.py
kalka/i18n/en/: kalka.ftl
kalka/tests/: test_backend_commands.py  test_models.py  test_state.py
