[project]
name = "kalka"
version = "11.0.1"
description = "PySide6/Qt GUI for czkawka file cleanup tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "typer>=0.9.0",
    "send2trash>=1.8.0",
    "Pillow>=10.0.0",
    "structlog>=23.0.0",
    "fluent.runtime>=0.4.0",
]

[project.scripts]
kalka = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "main.py"]

[tool.hatch.build.targets.wheel.force-include]
"i18n" = "i18n"
"icons" = "icons"
